# house-of-persona

./: .gitignore  README.md  main.py  message_tester.py  persona_clusters.py  prompt_templates.py  pyproject.toml
archive/: gpt4o_math_synthesis_output.jsonl
output/: it_results.json  messages.json  persona_clusters.json  results.json
